--- a/1.12/python-3.6.4/alpine/3.6/Dockerfile
+++ b/1.12/python-3.6.4/alpine/3.6/Dockerfile
@@ -1,5 +1,5 @@
-FROM westonsteimel/quantlib:1.12-alpine3.7 as ql
-FROM python:3.6.4-alpine3.7 as ql-python
+FROM westonsteimel/quantlib:1.12-alpine3.6 as ql
+FROM python:3.6.4-alpine3.6 as ql-python
 
 COPY --from=ql /usr/lib/libQuantLib.la /usr/lib/
 COPY --from=ql /usr/lib/libQuantLib.so.0.0.0 /usr/lib/
@@ -8,18 +8,7 @@ COPY --from=ql /usr/include/ /usr/include/
 RUN cd /usr/lib && ln -s libQuantLib.so.0.0.0 libQuantLib.so.0
 RUN cd /usr/lib && ln -s libQuantLib.so.0.0.0 libQuantLib.so
 
-RUN #apk add --no-cache --virtual .build-dependencies \
-    #linux-headers \
-    #build-base \
-    #autoconf \
-    #libtool \
-    ldconfig /usr/lib
-    #&& cd .. && rm -rf ${QUANTLIB_DIR} \
-    #&& apk del .build-dependencies
-
-#RUN ldconfig
-
-#RUN apk add --no-cache python3 python3-dev swig
+RUN ldconfig /usr/lib
 
 ARG QUANTLIB_SWIG_VERSION=1.12
 ARG QUANTLIB_SWIG_DIR=quantlib_swig
@@ -42,11 +31,10 @@ RUN mkdir -p ${QUANTLIB_SWIG_DIR} \
     && cd .. && rm -rf ${QUANTLIB_SWIG_DIR} \
     && apk del .build-dependencies 
 
-#CMD ["python"]
-
-FROM python:3.6.4-alpine3.7
+FROM python:3.6.4-alpine3.6
 LABEL Description="An environment with the QuantLib Python module"
 
+ARG PYTHON_LIB_PATH=python3.6
 ENV QUANTLIB_SWIG_VERSION ${QUANTLIB_SWIG_VERSION}
 
 RUN apk add --no-cache libstdc++
@@ -57,10 +45,8 @@ RUN cd /usr/lib && ln -s libQuantLib.so.0.0.0 libQuantLib.so.0
 RUN cd /usr/lib && ln -s libQuantLib.so.0.0.0 libQuantLib.so
 RUN ldconfig /usr/lib
 
-COPY --from=ql-python /usr/local/lib/python3.6/site-packages/QuantLib* \
-                    /usr/local/lib/python3.6/site-packages/
-#COPY --from=ql-python /usr/local/lib/python3.6/site-packages/QuantLib*.egg-info \
-#                    /usr/local/lib/python3.6/site-packages/
+COPY --from=ql-python /usr/local/lib/${PYTHON_LIB_PATH}/site-packages/QuantLib* \
+                    /usr/local/lib/${PYTHON_LIB_PATH}/site-packages/
 
 CMD ["python"]
 
