--- a/Dockerfile-alpine.template
+++ b/Dockerfile-alpine.template
@@ -15,7 +15,9 @@ RUN ldconfig /usr/local/lib
 ARG CONCURRENT_PROCESSES=1
 ARG QUANTLIB_SWIG_VERSION=%%QUANTLIB_SWIG_VERSION%%
 ARG QUANTLIB_SWIG_DIR=quantlib_swig
+ARG QUANTLIB_SWIG_CHECKSUM=%%QUANTLIB_SWIG_CHECKSUM%%
 ENV QUANTLIB_SWIG_VERSION=${QUANTLIB_SWIG_VERSION}
+ENV QUANTLIB_SWIG_CHECKSUM=${QUANTLIB_SWIG_CHECKSUM}
 
 RUN mkdir -p ${QUANTLIB_SWIG_DIR} \
     && apk --no-cache add --virtual .build-dependencies \
@@ -27,9 +29,10 @@ RUN mkdir -p ${QUANTLIB_SWIG_DIR} \
     curl \
     swig \
     tar \
-    && curl -sL --retry 3 https://github.com/lballabio/QuantLib-SWIG/releases/download/QuantLib-SWIG-v${QUANTLIB_SWIG_VERSION}/QuantLib-SWIG-${QUANTLIB_SWIG_VERSION}.tar.gz | \
-    tar -xz --strip 1 -C ${QUANTLIB_SWIG_DIR}/ \
     && cd ${QUANTLIB_SWIG_DIR} \
+    && curl -L --retry 3 https://github.com/lballabio/QuantLib-SWIG/releases/download/QuantLib-SWIG-v${QUANTLIB_SWIG_VERSION}/QuantLib-SWIG-${QUANTLIB_SWIG_VERSION}.tar.gz -o quantlib-swig.tar.gz \
+    && echo "${QUANTLIB_SWIG_CHECKSUM}  quantlib-swig.tar.gz" | sha256sum -c \
+    && tar -xzf quantlib-swig.tar.gz --strip 1 \
     && ./configure --disable-perl --disable-ruby --disable-csharp --disable-r --disable-java CXXFLAGS=-O3 \
     && make -j ${CONCURRENT_PROCESSES} -C Python && make install \
     && cd .. && rm -rf ${QUANTLIB_SWIG_DIR} \
